[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Sprites/Warrior_Sheet-Effect.png" type="Texture" id=1]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/TitleScreenTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Ground Tiles/TitleScreenGround.png" type="Texture" id=4]
[ext_resource path="res://Assets/Backgrounds/ForestBackground3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Backgrounds/ForestBackground4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/PermanentMarker-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="GDScript" id=9]
script/source = "extends ParallaxBackground


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.



"

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.168627, 0.192157, 0.156863, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_blend = true

[sub_resource type="DynamicFont" id=13]
size = 17
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=8]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer2/Control/Forresta:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 76, 77, 78, 79, 80, 81, 82, 83, 84, 85 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Attack2"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer2/Control/Forresta:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer2/Control/Forresta:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer2/Control/Forresta:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 14 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer2/Control/Forresta:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Slide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer2/Control/Forresta:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 86, 87, 88, 89, 90 ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 1
script = SubResource( 9 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 1 )
motion_mirroring = Vector2( 640, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.27451, 0.27451, 0.27451, 1 )
texture = ExtResource( 5 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.75, 1 )
motion_mirroring = Vector2( 848, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
modulate = Color( 0.431373, 0.431373, 0.431373, 1 )
texture = ExtResource( 6 )
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0745098, 0.0862745, 0.0705882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer2/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.5
margin_top = -159.5
margin_right = 110.5
margin_bottom = 159.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="CanvasLayer2/Control/CenterContainer"]
margin_left = 60.0
margin_top = 99.0
margin_right = 161.0
margin_bottom = 219.0
custom_constants/separation = 18

[node name="StartButton" type="Button" parent="CanvasLayer2/Control/CenterContainer/ButtonContainer"]
margin_right = 101.0
margin_bottom = 28.0
mouse_default_cursor_shape = 2
text = "Start Game"

[node name="InstructionsButton" type="Button" parent="CanvasLayer2/Control/CenterContainer/ButtonContainer"]
margin_top = 46.0
margin_right = 101.0
margin_bottom = 74.0
mouse_default_cursor_shape = 2
text = "Instructions"

[node name="OptionsButton" type="Button" parent="CanvasLayer2/Control/CenterContainer/ButtonContainer"]
margin_top = 92.0
margin_right = 101.0
margin_bottom = 120.0
mouse_default_cursor_shape = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="CanvasLayer2/Control/CenterContainer/ButtonContainer"]
visible = false
margin_top = 92.0
margin_right = 101.0
margin_bottom = 120.0
mouse_default_cursor_shape = 2
text = "Credits"

[node name="InfoPanel" type="Panel" parent="CanvasLayer2/Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -90.0
margin_right = 150.0
margin_bottom = 90.0
rect_min_size = Vector2( 300, 180 )
mouse_filter = 2
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OKButton" type="Button" parent="CanvasLayer2/Control/InfoPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -14.0
margin_top = -45.0
margin_right = 14.0
margin_bottom = -17.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer2/Control/InfoPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -95.0
margin_right = 145.0
margin_bottom = 95.0
rect_rotation = -0.00581953
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="CanvasLayer2/Control/InfoPanel/MarginContainer"]
margin_right = 290.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 13 )
text = "no savefile found or savefile is from a different version. 
created a new savefile."
align = 1
autowrap = true

[node name="TitleLabel" type="Label" parent="CanvasLayer2/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -281.0
margin_right = 281.0
margin_bottom = 72.0
text = "Run, Forresta, run!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GroundTile" type="Sprite" parent="CanvasLayer2/Control" groups=["Ground"]]
position = Vector2( 0, 284 )
texture = ExtResource( 4 )
centered = false

[node name="GroundTile2" type="Sprite" parent="CanvasLayer2/Control" groups=["Ground"]]
position = Vector2( 654, 284 )
texture = ExtResource( 4 )
centered = false

[node name="Forresta" type="Sprite" parent="CanvasLayer2/Control"]
position = Vector2( 60, 260 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 1 )
hframes = 6
vframes = 17
frame = 14

[node name="Label" type="Label" parent="CanvasLayer2/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -105.0
margin_top = -29.0
custom_fonts/font = SubResource( 14 )
text = "version 0.9.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 8 )
anims/Attack2 = SubResource( 10 )
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 11 )
anims/Run = SubResource( 6 )
anims/Slide = SubResource( 7 )

[node name="AnimTimer" type="Timer" parent="."]
one_shot = true

[node name="ActionTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="AnimTimer" to="." method="_on_AnimTimer_timeout"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]
